@@ -1,0 +1,35 @@
+[AGENT]
+
+Mozilla/5.0 (Windows NT 6.3; Trident/7.0; rv:11.0) like Gecko
+
+name            => 'MSIE',
+os              => 'Windows 8.1',
+parser          => 'msie11',
+toolkit         => [ 'Trident', '7.0', '7.000' ],
+version         => '11.000',
+version_raw     => '11.0',
+
+[AGENT]
+
+Mozilla/5.0 (Windows NT 6.1; Trident/7.0; rv:11.0) like Gecko
+
+name            => 'MSIE',
+os              => 'Windows 7',
+parser          => 'msie11',
+toolkit         => [ 'Trident', '7.0', '7.000' ],
+version         => '11.000',
+version_raw     => '11.0',
+
+[AGENT]
+
+Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.3; Trident/7.0)
+
+name             => 'MSIE',
+original_name    => 'MSIE',
+original_version => 11,
+os               => 'Windows 8.1',
+parser           => 'msie',
+toolkit          => [ 'Trident', '7.0', '7.000' ],
+version          => '7.000',
+version_raw      => '7.0',
+
