@@ -118,3 +118,7 @@ os          => 'Windows XP',
 parser      => 'msie',
 version     => '7.000',
 version_raw => '7.0',
+
+[AGENT]
+
+#TODO: Mozilla/4.0 (compatible; MSIE 7.0; MSIE 8.0; PAG-IE8; Windows NT 6.1; WOW64; Trident/4.0; SLCC2; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729; Media Center PC 6.0; .NET4.0C; .NET4.0E)
