@@ -45,3 +45,7 @@ os          => 'Windows XP',
 parser      => 'msie',
 version     => '8.000',
 version_raw => '8.0',
+
+[AGENT]
+
+#TODO: Mozilla/4.0 (compatible; MSIE 8.0; TS7; Windows NT 6.1; Trident/4.0; SLCC2; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729; Media Center PC 6.0; .NET4.0C; .NET4.0E; InfoPath.3; MS-RTC LM 8)
