@@ -232,3 +232,52 @@ generic     => 1,
 [AGENT]
 
 #TODO: Mozilla/5.0 (compatible; Yahoo! Slurp; http://help.yahoo.com/help/us/ysearch/slurp)
+
+[AGENT]
+
+#TODO: ADmantX Platform Semantic Analyzer - ADmantX Inc. - www.admantx.com - support@admantx.com
+
+[AGENT]
+
+#TODO: Google-Test
+
+[AGENT]
+# some archaic phone
+#TODO: LG/U8120/v1.0
+
+[AGENT]
+
+# huh?
+#TODO: Mac Safari
+
+[AGENT]
+
+#should be unknown
+#TODO: Microsoft Office Existence Discovery
+
+[AGENT]
+
+#TODO: Mozilla/4.0 (compatible; MSIE 999.1; Unknown)
+
+[AGENT]
+
+# http://synapse.apache.org
+
+#TODO: Mozilla/4.0 (compatible; Synapse)
+
+[AGENT]
+
+#TODO: Mozilla/4.0 [en] (compatible; MSIE 8.0; Windows)
+
+[AGENT]
+
+# crawler: http://www.httrack.com
+
+#TODO: Mozilla/4.5 (compatible; HTTrack 3.0x; Windows 98)
+
+[AGENT]
+
+# http://webmasters.stackexchange.com/questions/22504/what-is-a-sitecon-user-agent
+
+#TODO: Mozilla/5.0 (Linux; U; en-gb) AppleWebKit/418.9.1 (KHTML, like Gecko) SiteCon/8.10.22
+
