@@ -3,6 +3,10 @@ Revision history for Perl extension Parse::HTTP::UserAgent
 0.40_01 Fri Dec  6 15:38:22 2013
     => Get rid of pre5.6-isms.
     => Refactor constant definitions.
+    => Support MSIE 10/11
+    => New TOUCH property.
+    => Support new windows versions in the OS name fixer.
+    => New test strings (mostly TODO).
 
 0.39 Mon Dec  2 02:20:23 2013
     => Fix for RT#89274
